--- a/style/footer.css
+++ b/style/footer.css
@@ -48,6 +48,7 @@
     justify-content: space-between;
     height: 60px;
     align-items: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .lower-footer a {
     text-decoration: none;
